# omnifinder-ai

./: .env  .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  test_agent.py  test_react_debug.py
.qoder/rules/: 01_general-assistant-behavior.md  02_repo-wiki-generation.md
backend/agents/: search_agent.py
backend/components/: conversational_handler.py  query_classifier.py  result_synthesizer.py
backend/config/: agent_config.py
backend/core/: benchmark.py  llm_gateway.py  react_agent.py
backend/memory/: __init__.py  conversation.py
backend/prompts/: __init__.py  classifier_prompt.py  conversational_prompt.py  react_prompt.py  synthesis_prompt.py
backend/schemas/: __init__.py  agent_response.py  query.py  result.py
backend/tools/search/: __init__.py  arxiv.py  base.py  web_search.py  wikipedia.py
backend/utils/: logger.py
frontend/: app.py
scripts/: benchmark_models.py
src/agents/: search_agent.py
src/components/: conversation_memory.py  conversational_handler.py  query_classifier.py  result_synthesizer.py
src/config/: agent_config.py
src/core/: llm_gateway.py  react_agent.py
src/memory/: __init__.py  conversation.py
src/tools/: search_tools.py
src/tools/search/: __init__.py  arxiv.py  web_search.py  wikipedia.py
src/utils/: logger.py
