[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnifinder-ai"
version = "0.1.0"
description = "An AI-powered search and conversation agent built with LangChain"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Ammar Malik", email = "ammarmalik17@example.com"}
]
keywords = ["ai", "langchain", "search", "agent", "llm", "groq", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

dependencies = [
    "langchain>=0.1.16",
    "langchain-community>=0.0.36",
    "langchain-core>=0.1.48",
    "langchain-groq>=0.1.4",
    "langchain-openrouter>=0.0.2",
    "groq>=0.3.1",
    "langchain-openai>=0.1.0",
    "openai>=1.0.0",
    "openrouter>=0.7.11",
    "wikipedia>=1.4.0",
    "arxiv>=2.1.0",
    "ddgs>=9.11.2",
    "streamlit>=1.31.1",
    "pydantic>=2.6.4",
    "python-dotenv>=1.0.1",
    "tiktoken>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
omnifinder = "app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501", # line too long (black takes care of this)
    "B008", # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"